--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <h1>WikiViewer</h1>
 
 <section id='view-search'>
-<div id='container'>
+<div class='container'>
   <input id='searchTerm' type='text' placeholder="Search Wikipedia">
   <button id='search-button' type='button' class='btn'> <span class='glyphicon glyphicon-search'></span> </button>
 
