--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <section id='view-search'>
 <div class='container'>
   <input id='searchTerm' type='text' placeholder="Search Wikipedia">
-  <button id='search-button' type='button' class='btn'> <span class='glyphicon glyphicon-search'></span> </button>
+  <button id='search-button' type='submit' class='btn'> <span class='glyphicon glyphicon-search'></span> </button>
 
   <a href='https://en.wikipedia.org/wiki/Special:Random' class='random btn' target="_blank"> <span class='glyphicon glyphicon-random'></span> </a>
 
@@ -36,7 +36,7 @@
 
 </section>
 
-<footer>by <a href="http://github.io/cerita">Cerita</a></footer>
+<footer>by <a href="https://cerita.github.io/">Cerita</a></footer>
 </div>
 
     </body>
